# nomad-vault-mysql

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  db_client.py  db_client_transform.py  docker-compose.dotnet.yml  docker-compose.yml  requirements.txt
.github/workflows/: changelog.yml  ci-dotnet.yml  ci-java.yml  ci-python.yml  ci.yml
app/dotnet/: Dockerfile  NomadVaultMySqlDotnet.csproj  Program.cs
app/dotnet/Configuration/: AppRuntimeConfig.cs
app/dotnet/Controllers/: AppController.cs  HomeController.cs
app/dotnet/Models/: CustomerInput.cs  CustomerRecord.cs  (+2 more)
app/java/: Dockerfile  pom.xml
app/python/: Dockerfile  app.py  db_client_transform.py  pyproject.toml
app/python/templates/: add.html  base.html  dbview.html  index.html  records.html  update.html
config/: config.ini
nomad/: app_dynamic.hcl  app_hardcoded.hcl  app_static.hcl  app_transit.hcl  app_transit_connect.hcl  app_transit_connect_traefik.hcl  app_transit_traefik.hcl  mysql.hcl  mysql_connect.hcl  mysql_static.hcl  whoami.hcl
nomad/dotnet/: app_dynamic.hcl  app_hardcoded.hcl  app_static.hcl  app_transit.hcl  app_transit_connect.hcl  app_transit_connect_traefik.hcl
nomad/java/: app_dynamic.hcl  app_hardcoded.hcl  app_static.hcl  app_transit.hcl  app_transit_connect.hcl
nomad/mysql/: mysql.hcl  mysql_connect.hcl
nomad/python/: app_dynamic.hcl  app_hardcoded.hcl  app_static.hcl  app_transit.hcl  app_transit_connect.hcl  app_transit_connect_traefik.hcl
setup/: main.tf  terraform.tfvars  vault_dynamic_db.sh  vault_kv.sh  vault_transit.sh
templates/: index.html
(+27 files in other folders)
